2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Label.cs: Cleaned the code a little.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Panel.cs: Refactored Children.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Removed some unused variables.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Extended previous fix to MeasureOverride.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Fixed previous fix.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Removed an unused variable.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Fixed previous fix.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Fixed star sizing when the row/column size would not be between its minimum and maximum.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Minor refactoring.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Fixed grid lines rendering.

2007-06-25  George Giolfan  <georgegiolfan@yahoo.com>

	* Panel.cs: GetVisualChild now throws ArgumentOutOfRangeException when the passed index is out of range.

2007-06-25  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Fixed previous change.

2007-06-25  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Changed measurement for children in star sized rows/columns.

2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Fixed GridLineRenderer line drawing style.

2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Children are now measured with constrains adjusted for minimum and maximum row/column size.

2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Fixed minimum and maximum row/column size handling when the size is star.

2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* ColumnDefinition.cs, RowDefinition.cs: Call InvalidateMeasure on the owner grid when size maximum or minimum changes.
