@@ -214,6 +214,156 @@ Theme Styles For Windows Presentation Foundation Version 3.0.6817.0
 		</Setter>
 	</Style>
 	<!-- Skipped. -->
+	<Style x:Key="{x:Type mono_system_windows_controls:Label}"
+           TargetType="{x:Type mono_system_windows_controls:Label}">
+		<Setter Property="Foreground"
+                Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+		<Setter Property="Background"
+                Value="Transparent"/>
+		<Setter Property="Padding"
+                Value="5"/>
+		<Setter Property="HorizontalContentAlignment"
+                Value="Left"/>
+		<Setter Property="VerticalContentAlignment"
+                Value="Top"/>
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="{x:Type mono_system_windows_controls:Label}">
+					<Border Background="{TemplateBinding Background}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            Padding="{TemplateBinding Padding}"
+                            SnapsToDevicePixels="true">
+						<ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                          RecognizesAccessKey="True"
+                                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+					</Border>
+					<ControlTemplate.Triggers>
+						<Trigger Property="IsEnabled"
+                                 Value="false">
+							<Setter Property="Foreground"
+                                    Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
+						</Trigger>
+					</ControlTemplate.Triggers>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
+	</Style>
+	<SolidColorBrush x:Key="ListBorder"
+		 Color="#FF7F9DB9"/>
+
+
+
+	<Style x:Key="{x:Type mono_system_windows_controls:ListBox}"
+           TargetType="{x:Type mono_system_windows_controls:ListBox}">
+		<Setter Property="Background"
+                Value="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"/>
+		<Setter Property="BorderBrush"
+                Value="{StaticResource ListBorder}"/>
+		<Setter Property="BorderThickness"
+                Value="1"/>
+		<Setter Property="Foreground"
+                Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+		<Setter Property="ScrollViewer.HorizontalScrollBarVisibility"
+                Value="Auto"/>
+		<Setter Property="ScrollViewer.VerticalScrollBarVisibility"
+                Value="Auto"/>
+		<Setter Property="ScrollViewer.CanContentScroll"
+                Value="true"/>
+		<Setter Property="VerticalContentAlignment"
+                Value="Center"/>
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="{x:Type mono_system_windows_controls:ListBox}">
+					<Border Name="Bd"
+                            Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            SnapsToDevicePixels="true"
+                            Padding="1">
+						<ScrollViewer Padding="{TemplateBinding Padding}"
+                                      Focusable="false">
+							<ItemsPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+						</ScrollViewer>
+					</Border>
+					<ControlTemplate.Triggers>
+						<Trigger Property="IsEnabled"
+                                 Value="false">
+							<Setter TargetName="Bd"
+                                    Property="Background"
+                                    Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"/>
+						</Trigger>
+						<Trigger Property="IsGrouping"
+                                 Value="true">
+							<Setter Property="ScrollViewer.CanContentScroll"
+                                    Value="false"/>
+						</Trigger>
+					</ControlTemplate.Triggers>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
+	</Style>
+
+
+
+
+	<Style x:Key="{x:Type mono_system_windows_controls:ListBoxItem}"
+           TargetType="{x:Type mono_system_windows_controls:ListBoxItem}">
+		<Setter Property="Background"
+                Value="Transparent"/>
+		<Setter Property="HorizontalContentAlignment"
+                Value="{Binding Path=HorizontalContentAlignment,RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
+		<Setter Property="VerticalContentAlignment"
+                Value="{Binding Path=VerticalContentAlignment,RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
+		<Setter Property="Padding"
+                Value="2,0,0,0"/>
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="{x:Type mono_system_windows_controls:ListBoxItem}">
+					<Border Name="Bd"
+                            Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            Padding="{TemplateBinding Padding}"
+                            SnapsToDevicePixels="true">
+						<ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+					</Border>
+					<ControlTemplate.Triggers>
+						<Trigger Property="IsSelected"
+                                 Value="true">
+							<Setter TargetName="Bd"
+                                    Property="Background"
+                                    Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
+							<Setter Property="Foreground"
+                                    Value="{DynamicResource {x:Static SystemColors.HighlightTextBrushKey}}"/>
+						</Trigger>
+						<MultiTrigger>
+							<MultiTrigger.Conditions>
+								<Condition Property="IsSelected"
+                                           Value="true"/>
+								<Condition Property="Selector.IsSelectionActive"
+                                           Value="false"/>
+							</MultiTrigger.Conditions>
+							<Setter TargetName="Bd"
+                                    Property="Background"
+                                    Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"/>
+							<Setter Property="Foreground"
+                                    Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+						</MultiTrigger>
+						<Trigger Property="IsEnabled"
+                                 Value="false">
+							<Setter Property="Foreground"
+                                    Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
+						</Trigger>
+					</ControlTemplate.Triggers>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
+	</Style>
+	<!--Skipped-->
 	<LinearGradientBrush x:Key="ProgressBarFill"
                          EndPoint="0,1"
                          StartPoint="0,0">
